--- a/src/index.css
+++ b/src/index.css
@@ -1,14 +1,57 @@
+@font-face {
+  font-family: pokemonFont;
+  src: url(./assets/pokemonsolid.ttf);
+}
+
+@font-face {
+  font-family: "Press Start 2P";
+  src: url(./assets/PressStart2P-Regular.ttf);
+}
+
 :root {
-  font-family: Inter, system-ui, Avenir, Helvetica, Arial, sans-serif;
+  font-family: "Press Start 2P", "Courier New", Courier, monospace;
   font-synthesis: none;
   text-rendering: optimizeLegibility;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
+
+  --primary: #ee1515;
+  --secondary: #fff;
+  --yellow: #ffde00;
+  --light-blue: #3b4cca;
+  --dark-blue: #1b2a9a;
+}
+
+*,
+*::after,
+*::before {
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
 }
 
 body {
   margin: 0;
   display: flex;
-  min-width: 320px;
   min-height: 100vh;
+  overflow-x: hidden;
+}
+
+#root {
+  min-height: 100dvh;
+  min-width: 100dvw;
+  display: flex;
+  flex-direction: column;
+}
+
+::-webkit-scrollbar {
+  width: 0.5rem;
+}
+
+::-webkit-scrollbar-track {
+  background-color: transparent;
+}
+
+::-webkit-scrollbar-thumb {
+  background: linear-gradient(var(--primary), var(--secondary));
 }
